Issue 19155: **FileBrowser: Hide Icon for buttons does not work Issue 19159: **FileBrowser: File Properties button for "Edit Properties" button missing outline Issue 19151: **Should display visit description on manage page Issue 19147: **Create Project > Project Settings file location form field cutoff in IE

--- a/core/webapp/createFolder.css
+++ b/core/webapp/createFolder.css
@@ -1,5 +1,5 @@
 .labkey-wizard-input {
-    width: 100% !important;
+    width: 98% !important;
     max-width: 400em;
 }
 .labkey-wizard-header div {
